# Change Log
[Chili Bullet Weapons](https://iunius118.github.io/ChiliBulletWeapons/).
[Source](https://github.com/Iunius118/ChiliBulletWeapons).

## [Unreleased]
### Added
- Add critical hit to chili bullet. It has a 10% chance of occurring and dealing 22 damage.

### Changed
- Require CBW Chili Peppers and Foods v1.1.1+.
- Guns with custom names will now have reduced chance of durability reduction.

## [2.0.0-beta.1]
### Added
- Add mod data components: `loading`, `quick_loading`, `multishot`, `piercing` and `bayoneted`.
- Add mod item property `gun` for gun models.
- Add machine gun recipe.

### Changed
- Port to 1.21.1.
- NeoForge version - Require NeoForge 21.1.169.
- Forge version - Require Minecraft Forge 52.1.0.
- Fabric version - Require Fabric Loader 0.16.14, Fabric API 0.116.0+1.21.1, and Cloth Config API 15.0.140.
- Require CBW Chili Peppers and Foods 1.0.0.
- Rename `canShotgunMultiHit` to `canMultishotMultiHit` in config.
- Rename shotgun to volley gun.
- Guns now have upgrade values with data components instead of enchantments.
- Change enchantments applicable to guns: unbreaking, mending, and curse of vanishing.
- Change machine gun durability from 512 to 64.
- Change recipes of gun upgrade items.
- Use entity model for rendering of chili bullet entity.

### Removed
- Remove mod item properties `loading`, `multishot`, `piercing` and `bayoneted`.