@@ -1,0 +1,5 @@
+{
+  "values": [
+    "chilibulletweapons:bullet_chili_sack"
+  ]
+}
