@@ -10,6 +10,7 @@ public class ModItemTags {
     public static final TagKey<Item> C_INGOTS_IRON = makeCTag("ingots/iron");
     public static final TagKey<Item> C_INGOTS_NETHERITE = makeCTag("ingots/netherite");
 
+    public static final TagKey<Item> CHILI_BIOMASS = makeCBWTag("chili_biomass");
     public static final TagKey<Item> NON_FLAMMABLE_PLANKS = makeCBWTag("non_flammable_planks");
 
     private static TagKey<Item> makeCBWTag(String id) {
